tests/errors/time_parse_bad.lq
# An unparseable date must be a clean catchable error, not a crash.
time.parse("not a date at all")
